Got a lot more working
